# FirstSemProject

./: CMakeLists.txt  main.cpp  mainWindow.cpp  mainWindow.h
components/: waveFormCanvas.cpp  waveFormCanvas.h
pages/: cropPage.cpp  cropPage.h  eqPage.cpp  eqPage.h  homePage.cpp  homePage.h  mainPage.cpp  mainPage.h
structures/: appData.h  history.h
util/: audioBufferDevice.h  audioPlayer.h  biquad.h  eqEditor.cpp  eqEditor.h  readAudioFile.cpp  readAudioFile.h
